tests/rosetta/out/Smalltalk/bifid-cipher.out
/tmp/bifid-cipher.st:7: parse error, expected ']'
